manifest/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app-pod
  labels:
    app: my-app
    type: frontend
spec: 
  containers:
  - name: nginx-container
    image: public.ecr.aws/nginx/nginx:alpine-slim
