manifest/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-node-port-service
  labels:
    app: my-node-port-service
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
